--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -15,6 +15,7 @@
 	bottom: 0;
 	left: -13em;
 	z-index: 1000000;
+	margin-top: 10px;
 }
 ul{
 	list-style: none;
@@ -81,4 +82,8 @@ li:hover{
 	padding: 1em 1.5em;
 	right: -1em;
 
+}
+.sec-head{
+	margin-left: auto;
+	margin-right: auto;
 }
